Fix footer CSS for mobile (too wide)

--- a/assets/css/common/footer.css
+++ b/assets/css/common/footer.css
@@ -4,11 +4,8 @@
 }
 
 .footer {
+    max-width: 100%;
     text-align: center;
-}
-
-.footer span:last-child {
-    white-space: nowrap;
 }
 
 .footer a {
